add kt sample